--- a/css/style_pc.css
+++ b/css/style_pc.css
@@ -28,25 +28,174 @@ video {
 }
 
 /* HEADER */
-#header {}
+#header {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100px;
+  z-index: 9;
+  font-size: 20px;
+  font-weight: 700;
+  color: #000;
+  border-bottom: 1px solid transparent;
+  box-sizing: border-box;
+  transition: height .3s;
+}
 
-#header .inner {}
+#header.active {
+  height: 90px;
+  border-bottom-color: #000;
+}
 
-#header h1 {}
+#header .inner {
+  height: 100%;
+}
 
-#header h1 a {}
+#header a {
+  display: block;
+  cursor: url("../img/cursor-pointer.png"), auto;
+}
 
-#header h1 a img {}
+#header h1 {
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+}
 
-#gnb {}
+#header h1 a {
+  width: 112px;
+}
 
-#gnb ul {}
-#gnb ul li {}
-#gnb ul li a {}
+#header h1 a img {
+  
+}
 
-#header .top-menu {}
-#header .top-menu li {}
-#header .top-menu li a {}
+#gnb {
+  position: absolute;
+  right: 220px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+#gnb > ul {}
+
+#gnb > ul > li {
+  position: relative;
+  display: inline-block;
+}
+
+#gnb > ul > li:hover::before {
+  opacity: 1;
+  transform: translateY(0);
+} 
+
+#gnb > ul > li::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  width: 6px;
+  height: 6px;
+  margin: 0 auto;
+  background-color: #000;
+  border-radius: 50%;
+  opacity: 0;
+  transform: translateY(-50px);
+  transition: .3s;
+}
+
+#gnb > ul > li > a {
+  padding: 10px 20px;
+}
+
+#gnb > ul > li:hover .sub-menu {
+  display: block;
+}
+
+#gnb > ul > li .sub-menu {
+  position: absolute;
+  left: 50%;
+  top: 100%;
+  transform: translateX(-50%);
+  width: 100%;
+  padding: 10px;
+  background-color: #000;
+  display: none;
+}
+
+#gnb > ul > li .sub-menu li {
+  
+}
+
+#gnb > ul > li .sub-menu li a {
+  padding: 10px;
+  font-size: 15px;
+  color: #fff;
+}
+
+#gnb > ul > li .sub-menu li a span {
+  position: relative;
+}
+
+#gnb > ul > li .sub-menu li a span::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: -5px;
+  width: 100%;
+  height: 3px;
+  background-color: #fff;
+  opacity: 0;
+  transition: .3s;
+}
+
+#gnb > ul > li .sub-menu li a span:hover::after {
+  opacity: 1;
+}
+
+#header .top-menu {
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+#header .top-menu li {
+  position: relative;
+  display: inline-block;
+}
+
+#header .top-menu li a {
+ 
+}
 #header .top-menu li a i.fas {}
-#header .top-menu li:last-child a span {}
+
+#header .top-menu li:last-child:hover::before {
+  width: 100%;
+  opacity: 1;
+}
+
+#header .top-menu li:last-child::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 0;
+  height: 10px;
+  background: url("../img/underline.svg") no-repeat center;
+  opacity: 0;
+  transition: .3s;
+}
+
+#header .top-menu li:last-child a {
+  padding: 10px;
+}
+
+#header .top-menu li:last-child a span {
+  display: inline-block;
+    padding-right: 5px;
+}
 
