--- a/css/style_pc.css
+++ b/css/style_pc.css
@@ -296,3 +296,49 @@ video {
 .main-visual .floating.floating3:hover {
   transform: translateY(-50%) rotate(90deg);
 }
+
+/* BRAND */
+.main-brand {}
+
+.main-brand .inner {}
+
+.main-brand h3 {}
+
+.main-brand .image {}
+.main-brand .image img {}
+.main-brand .content-group {}
+.main-brand .content-group .title {}
+.main-brand .content-group .description {}
+.main-brand .content-group .btn {}
+.main-brand .video__area {}
+.main-brand .video__area video {}
+
+.main-brand .pet-so-chic {}
+.main-brand .pet-so-chic .image {}
+.main-brand .pet-so-chic .image img {}
+.main-brand .pet-so-chic .content-group {}
+.main-brand .pet-so-chic .content-group .title {}
+.main-brand .pet-so-chic .content-group .description {}
+.main-brand .pet-so-chic .content-group .btn {}
+.main-brand .pet-so-chic .video__area {}
+.main-brand .pet-so-chic .video__area video {}
+
+.main-brand .maxbone {}
+.main-brand .maxbone .content-group {}
+.main-brand .maxbone .content-group .title {}
+.main-brand .maxbone .content-group .description {}
+.main-brand .maxbone .content-group .btn {}
+.main-brand .maxbone .image {}
+.main-brand .maxbone .image img {}
+.main-brand .maxbone .video__area {}
+.main-brand .maxbone .video__area video {}
+
+.main-brand .milk-and-pepper {}
+.main-brand .milk-and-pepper .image {}
+.main-brand .milk-and-pepper .image img {}
+.main-brand .milk-and-pepper .content-group {}
+.main-brand .milk-and-pepper .content-group .title {}
+.main-brand .milk-and-pepper .content-group .description {}
+.main-brand .milk-and-pepper .content-group .btn {}
+.main-brand .milk-and-pepper .video__area {}
+.main-brand .milk-and-pepper .video__area video {}
