--- a/css/style_pc.css
+++ b/css/style_pc.css
@@ -66,6 +66,11 @@ h3 {
   opacity: 1;
 }
 
+.floating {
+  position: absolute;
+  cursor: url("../img/cursor-pointer.png"), auto;
+}
+
 #wrapper {
   min-width: 1024px;
   overflow: hidden;
@@ -210,21 +215,44 @@ h3 {
   display: inline-block;
 }
 
+#header .top-menu li:first-child::before,
+#header .top-menu li:last-child::before {
+  content: '';
+  position: absolute;
+  background-repeat: no-repeat;
+  background-position: center;
+  opacity: 0;
+}
+
+#header .top-menu li:first-child::before {
+  width: 10px;
+  height: 6px;
+  left: 17%;
+  top: 30%;
+  background-image: url("../img/search_eye.svg");
+  transition: opacity .5s;
+}
+
+#header .top-menu li:first-child:hover::before {
+  opacity: 1;
+}
+
+#header .top-menu li:last-child::before {
+  width: 0;
+  height: 10px;
+  left: 0;
+  bottom: 0;
+  background-image: url("../img/underline.svg");
+  transition: .3s;
+}
+
 #header .top-menu li:last-child:hover::before {
   width: 100%;
   opacity: 1;
 }
 
-#header .top-menu li:last-child::before {
-  content: '';
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 0;
-  height: 10px;
-  background: url("../img/underline.svg") no-repeat center;
-  opacity: 0;
-  transition: .3s;
+#header .top-menu li:first-child a {
+  position: relative;
 }
 
 #header .top-menu li:last-child a {
@@ -233,7 +261,7 @@ h3 {
 
 #header .top-menu li:last-child a span {
   display: inline-block;
-    padding-right: 5px;
+  padding-right: 5px;
 }
 
 /* MAIN */
@@ -266,11 +294,6 @@ h3 {
   font-size: 16px;
   font-weight: 500;
   line-height: 1.8em;
-}
-
-.main-visual .floating {
-  position: absolute;
-  cursor: url("../img/cursor-pointer.png"), auto;
 }
 
 .main-visual .floating.floating1 {
@@ -314,6 +337,16 @@ h3 {
   padding: 170px 0 100px;
 }
 
+.main-brand .inner > div {
+  position: relative;
+}
+
+.main-brand .floating.floating4 {
+  width: 138px;
+  right: 7%;
+  top: 2%;
+}
+
 .main-brand h3 {
   margin-bottom: 85px;
 }
@@ -349,10 +382,9 @@ h3 {
 
 .main-brand .video__area {
   position: relative;
-  width: 100%;
+  width: 95%;
   height: 0;
   padding-bottom: 56.25%;
-  cursor: url("../img/cursor-see.png"), auto;
 }
 .main-brand .video__area video {
   position: absolute;
@@ -360,9 +392,41 @@ h3 {
   top: 0;
   width: 100%;
   height: 100%;
+  cursor: url("../img/cursor-see.png"), auto;
 }
 
-.main-brand .pet-so-chic {}
+.main-brand .pattern {
+  position: absolute;
+}
+.main-brand .pattern.pattern1 {
+  width: 45px;
+  left: 15%;
+  top: 50%;
+}
+.main-brand .pattern.pattern2 {
+  width: 65px;
+  right: 30%;
+  top: 45%;
+}
+.main-brand .pattern.pattern3 {
+  width: 80px;
+  right: 15%;
+  top: 50%;
+}
+
+.main-brand .pattern.pattern4 {
+  width: 210px;
+  right: 27%;
+  top: 48%;
+}
+
+.main-brand .pattern.pattern5 {
+
+}
+
+.main-brand .pet-so-chic {
+  
+}
 .main-brand .pet-so-chic .image {
   width: 48%;
 }
@@ -381,9 +445,49 @@ h3 {
 .main-brand .pet-so-chic .video__area {
   margin: 65px auto 155px;
 }
+
+.main-brand .pet-so-chic .video__area::before,
+.main-brand .pet-so-chic .video__area::after {
+  content: '';
+  position: absolute;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.main-brand .pet-so-chic .video__area::before {
+  right: -3%;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 70px;
+  height: 50px;
+  background-image: url("../img/pattern-grass-03.jpg");
+}
+
+.main-brand .pet-so-chic .video__area::after {
+  right: 35%;
+  bottom: -15%;
+  width: 83px;
+  height: 40px;
+  background-image: url("../img/pattern-grass-04.jpg");
+}
+
 .main-brand .pet-so-chic .video__area video {}
 
-.main-brand .maxbone {}
+.main-brand .maxbone {
+  
+}
+
+.main-brand .maxbone::before {
+  content: '';
+  position: absolute;
+  left: -150px;
+  top: 45%;
+  width: 330px;
+  height: 370px;
+  background: url("../img/layer-toy.png") no-repeat center/cover;
+}
+
 .main-brand .maxbone .content-group {
   width: 48%;
 }
@@ -399,9 +503,71 @@ h3 {
 .main-brand .maxbone .video__area {
   margin: 120px auto 207px;
 }
+
+.main-brand .maxbone .pattern {
+  width: 48px;
+  top: 73%;
+  animation-name: fade-in;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in;
+  animation-duration: .5s;
+}
+
+.main-brand .maxbone .pattern.pattern1 {
+  left: 20%;
+  animation-delay: 0s;
+}
+
+.main-brand .maxbone .pattern.pattern2 {
+  left: 15%;
+  animation-delay: 1s;
+}
+
+.main-brand .maxbone .pattern.pattern3 {
+  left: 10%;
+  animation-delay: 2s;
+}
+
+@keyframes fade-in {
+  0% {
+    display: none;
+  }
+  100% {
+ display: block;
+  }
+}
+
 .main-brand .maxbone .video__area video {}
 
-.main-brand .milk-and-pepper {}
+.main-brand .milk-and-pepper {
+  
+}
+
+.main-brand .milk-and-pepper::before,
+.main-brand .milk-and-pepper::after {
+  content: '';
+  position: absolute;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.main-brand .milk-and-pepper::before {
+  background-image: url("../img/layer-hand.png");
+  width: 347px;
+  height: 297px;
+  right: -12%;
+  top: -35%;
+}
+
+.main-brand .milk-and-pepper::after {
+  width: 117px;
+  height: 132px;
+  right: 13%;
+  top: 0;
+  background-image: url("../img/layer-heart.png");
+}
+
 .main-brand .milk-and-pepper .image {
   width: 48%;
 }
