--- a/css/style_pc.css
+++ b/css/style_pc.css
@@ -31,10 +31,11 @@ h3 {
   font-weight: 700;
   line-height: 70px;
   color: #000;
-  cursor: url("../img/cursor-hand.png"), auto;
+  cursor: url("../img/cursor_hand.png"), auto;
 }
 
-.btn span {
+.btn span,
+.btn i {
   position: relative;
   z-index: 3;
 }
@@ -69,7 +70,6 @@ h3 {
 
 .floating {
   position: absolute;
-  cursor: url("../img/cursor-pointer.png"), auto;
 }
 
 #wrapper {
@@ -112,7 +112,7 @@ h3 {
 
 #header a {
   display: block;
-  cursor: url("../img/cursor-pointer.png"), auto;
+  cursor: url("../img/cursor_pointer.png"), auto;
 }
 
 #header h1 {
@@ -331,7 +331,6 @@ h3 {
 /* BRAND */
 .main-brand {
   text-align: center;
-  cursor: url("../img/cursor-pointer.png"), auto;
 }
 
 .main-brand .inner {
@@ -382,7 +381,7 @@ h3 {
   top: 0;
   width: 100%;
   height: 100%;
-  cursor: url("../img/cursor-see.png"), auto;
+  cursor: url("../img/cursor_see.png"), auto;
 }
 
 .main-brand .pattern {
@@ -535,10 +534,12 @@ h3 {
 
 /* NEW */
 .main-new {
-  padding: 100px 0;
+  
 }
 
-.main-new .inner {}
+.main-new .inner {
+  padding: 100px 0;
+}
 
 .main-new h3 {}
 
@@ -546,7 +547,7 @@ h3 {
 
 .main-new .swiper .swiper-slide {
   margin-bottom: 90px;
-  cursor: url("../img/cursor-hand.png"), auto;
+  cursor: url("../img/cursor_hand.png"), auto;
 }
 
 .main-new .swiper-slide .image {
@@ -608,10 +609,12 @@ h3 {
 
 .main-new .swiper .swiper-prev {
   left: 45%;
+  cursor: url("../img/cursor_hand_tiny.png"), auto;
 }
 
 .main-new .swiper .swiper-next {
   right: 45%;
+  cursor: url("../img/cursor_pointer.png"), auto;
 }
 
 /* SLOGAN */
@@ -641,3 +644,49 @@ h3 {
     transform: translateX(-100%);
   }
 }
+
+/* COTIELOG */
+.main-cotielog {}
+.main-cotielog .inner {
+  padding: 100px 0;
+}
+.main-cotielog h3 {}
+.main-cotielog .content-group {
+  text-align: center;
+}
+
+.main-cotielog .content {
+  display: inline-block;
+  width: 420px;
+  vertical-align: top;
+  margin-bottom: 100px;
+}
+
+.main-cotielog .content:nth-child(2n) {
+  margin-left: 100px;
+}
+
+.main-cotielog .content:nth-child(2) {
+  margin-top: 105px;
+}
+.main-cotielog .content .poster {
+  
+}
+.main-cotielog .content .poster img {}
+.main-cotielog .content .title {
+  display: block;
+  padding-top: 18px;
+  font-size: 18px;
+  text-align: left;
+}
+
+.main-cotielog .content:nth-child(2) .title::after {
+  content: '🎉';
+}
+
+.main-cotielog .btn span {
+  padding-left: 10px;
+}
+
+
+
