--- a/css/style_pc.css
+++ b/css/style_pc.css
@@ -348,6 +348,10 @@ h3 {
   top: 90px;
 }
 
+.main-brand .floating.floating4:hover {
+  transform: rotate(45deg);
+}
+
 .main-brand h3 {
   margin-bottom: 85px;
 }
@@ -757,33 +761,66 @@ h3 {
   font-size: 45px;
   font-weight: 700;
 }
-.foonter__links {
+
+.footer__menu li:hover a {
+  color: #CCC7BB;
+}
+
+.footer__links {
   float: right;
 }
-.foonter__links li {
+
+.footer__links li {
+  position: relative;
   display: inline-block;
 }
 
-.foonter__links li + li {
+.footer__links li + li {
   margin-left: 18px;
 }
 
-.foonter__links li:last-child i.fas {
+.footer__links li:last-child i.fas {
   font-size: 50px;
   color: 	#FEE500;
 }
 
-.foonter__links li a {
+.footer__links li::before {
+  content: '';
+  position: absolute;
+  width: 0;
+  height: 5px;
+  left: 0;
+  bottom: 0;
+  border-radius: 3px;
+  background-color: #fff;
+  transition: .3s;
+}
+
+.footer__links li:last-child::before {
+  display: none;
+}
+
+.footer__links li:hover::before {
+  width: 100%;
+  opacity: 1;
+}
+
+.footer__links li a {
   padding: 10px 0;
   font-size: 22px;
   font-weight: 700;
 }
+
 #footer .info {
   margin: 30px 0 55px;
 }
 
 #footer .info a {
   padding: 5px 0;
+}
+
+#footer .info a:hover {
+  color: #CCC7BB;
 }
 
 #footer .info a span {
@@ -813,6 +850,48 @@ h3 {
 #footer .copyright {
   font-size: 17px;
   color: rgba(240,237,230,.5);
+}
+
+/* TO TOP */
+#to-top {
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  z-index: 9;
+  font-size: 22px;
+  font-weight: 700;
+  text-align: center;
+  cursor: url("../img/cursor_pointer.png"), auto;
+}
+
+#to-top:hover span {
+  transform: rotate(-25deg);
+}
+
+#to-top span {
+  display: block;
+  transition: .3s;
+}
+
+#to-top .to-top-punch {
+  display: none;
+}
+
+#to-top:hover .to-top-punch {
+  display: block;
+}
+#to-top .to-top-punch img {}
+
+#to-top .to-top-punch .scratch1, 
+#to-top .to-top-punch .scratch2 {
+  display: inline-block;
+  width: 5px;
+}
+#to-top .to-top-punch .scratch1 {}
+#to-top .to-top-punch .scratch2 {}
+#to-top .to-top-punch .punch {
+  width: 25px;
+  margin: 0 auto;
 }
 
 
