--- a/css/style_pc.css
+++ b/css/style_pc.css
@@ -710,7 +710,24 @@ h3 {
 }
 
 .main-instagram__menu li a {
+  position: relative;
+  display: block;
   cursor: url("../img/cursor_heart.png"), auto;
+}
+
+.main-instagram__menu li:hover a::before {
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+.main-instagram__menu li a::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+  transition: .3s;
 }
 
 /* FOOTER */
